--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>React App</title>
+  <title>Baza Organizacji Pozarządowych - COP</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
   <div id="app"></div>
