publish: Add tags on organization page, minor fixes
generated from commit 86c2e157e81897db39c7ce3a7158e4a9dd1005f7

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Baza Organizacji Pozarządowych - COP</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="main.c476533a0c60c50485bd.js"></script></body>
+<script type="text/javascript" src="main.bb95296e0be411fa5caa.js"></script></body>
 </html>
