--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Baza Organizacji Pozarządowych - COP</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <script src="https://use.fontawesome.com/3f1460eb0b.js"></script>
 </head>
 <body>
   <div id="app"></div>
