publish: Custom fields
generated from commit 024023e105efe8d6a9de425e79f3922fba4d9d82

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Baza Organizacji Pozarządowych - COP</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <script src="https://use.fontawesome.com/3f1460eb0b.js"></script>
 </head>
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="main.bb95296e0be411fa5caa.js"></script></body>
+<script type="text/javascript" src="main.ea55fc2234a76bc2d12e.js"></script></body>
 </html>
