--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 </head>
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="main.ec7f94c5510e976592cd.js"></script></body>
+<script type="text/javascript" src="index.bundle.js"></script></body>
 </html>
